--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Odin Recipes</title>
   <script src="script.js"></script>
 </head>
 <body>
+  <h1>Odin Recipes</h1>
+  <a href="recipes/shawarma.html">Shawarma</a>
   
 </body>
 </html>
