--- a/recipes/shawarma.html
+++ b/recipes/shawarma.html
@@ -6,6 +6,7 @@
   <title>Odin Recipes</title>
 </head>
 <body>
+  <a href="/theOdinProject/index.html">Home</a>
   <h1>Shawarma Recipes</h1>
   <figure>
     <img src="https://www.allrecipes.com/thmb/Mo-5k_aVuWWwPtVF9y2E12ddQ6M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6590016-d9eb4ad272624773bffe57c1753b6571.jpg" alt="shawarma recipes" style="width: 300px;">
